# GFX

./: .gitignore  CMakeLists.txt  Include.h  Intro.cpp  Intro.h  Matrices.cpp  Matrices.h  README.md  TransformationMatrix.cpp  TransformationMatrix.h  engine.cc
Drawings/3D Lichamen/: Fig20_1.L3D
Drawings/L2D/: koch_curve2.L2D
Drawings/zBuffer/: test.ini  z_buffered_wireframes114.ini
GFX/: 3DLSystem.cpp  3DLSystem.h  Cube.cpp  Cube.h  LineDrawing.cpp  LineDrawing.h  Parser.cpp  Parser.h  TransformationMatrix.cpp  TransformationMatrix.h  Utils.h  ZBuffer.cpp  ZBuffer.h  main.cpp  main.h
GFX/Platonische lichamen/: Cone.cpp  Cone.h  Cube.h  Cylinder.cpp  Cylinder.h  Dodecahedron.cpp  Dodecahedron.h  Icosahedron.cpp  Icosahedron.h  Octahedron.cpp  Octahedron.h  Sphere.cpp  Sphere.h  Tetrahedron.cpp  Tetrahedron.h  Torus.cpp  Torus.h
L2D/: filelist
src/: Include.h  easy_image.cc  easy_image.h  engine.cc
